fix spacing b/w events and collage

--- a/src/component/CulturePage/Events2/style.css
+++ b/src/component/CulturePage/Events2/style.css
@@ -81,7 +81,7 @@
   .events-2-container {
     display: flex;
     flex-direction: column;
-    height: 340vw;
+    height: 300vw;
   }
 
   .events-2-section-header-top {
